static/react-source/src/Views/Main.scss
/* ... */
//-- dev panel --------------------------------------------------

.dev-tools-button           {position: absolute;
                             top: 14.5rem;
                             right: -0.75rem;
                             padding-left: 0.5rem;
                             z-index: 30;
                             width: 3.15rem;
    svg                     {position: relative;
                             left: -0.1rem;
    }
}

.dev-tools-test-path-form   {
    .label                  {font-weight: 500;
    }
    .row.encapsulated       {background-color: lighten($niceGrey, 50%);
                             padding: 0.5rem 0.25rem;
                             border-radius: 0.25rem;
                             margin: 0 0.25rem 0.5rem 0.25rem;
    }
}

//-- tools --------------------------------------------------

.tools-component           {position: fixed;
                            right: -5.25rem;
                            top: 5rem;
                            z-index: 101;
                            box-shadow: 0 4px 2px rgba(0,0,0,0.3);
                            border-radius: $border-radius 0 0 $border-radius;
    &:hover                {right: 0;
                            transition: all 300ms;
    }
    .btn                   {text-align: left;
                            border-radius: $border-radius 0 0 $border-radius;
                            padding-left: .25rem;
        &.btn-primary       {background-color: $nominative;
                            border-color: $nominative;}
    }
}

.panel-body                {position: fixed;
                            width: 80vw;
                            height: 100%;
                            right: 0;
                            top: -1rem;
                            z-index: 100;
                            background-color: $white;
                            box-shadow: 0 4px 2px rgba(0,0,0,0.3);
                            border-radius: $border-radius 0 0 $border-radius;
                            padding: 5rem 0 0 0;

    h2                      {margin-left: 1rem;
    }

    &.panel-body-enter,
    &.panel-body-appear        {//right: -80%;
                                transform: translate3d(180vw, 0, 0);
    }
    &.panel-body-enter-done,
    &.panel-body-appear-done   {//right: 0;
                                transform: translate3d(0, 0, 0);
                                transition: all 500ms;
    }
    &.panel-body-exit          {//opacity: 1;
                                //right: 0;
                                transform: translate3d(0, 0, 0);
    }
    &.panel-body-exit-done,
    &.panel-body-exit-active   {//opacity: 0;
                                //right: -80%;
                                transform: translate3d(180vw, 0, 0);
                                transition: all 500ms;
    }

    @media (max-width: map-get($grid-breakpoints, md))
                               {width: 100vw;
    }
    @media (min-width: map-get($grid-breakpoints, lg))
                               {width: 60vw;
    }
    .panel-view                {padding-top: 1rem;
    }
}
/* ... */

